# Automated-Dealer-Machine

./: README.md
programs/ADM/: Cargo.toml
programs/ido-pool/src/: ids.txt  lib.rs
tests/: EUFr_pk.txt  EUFtr_pk.txt  EUUsdc_pk.txt  ctest.js  ctest_client.js  ctest_client_2.js  fixedRateMint_pk.txt  ftrMint_pk.txt  package-lock.json  package.json  poolAccount.txt  poolAccount_pk.txt  poolFixedRate_pk.txt  poolFtr_pk.txt  poolSignerAccount_pk.txt  poolUsdc_pk.txt  pool_ftr_pk.txt  test.js  usdcMint_pk.txt  userFixedRate_pk.txt  userFtr_pk.txt  userUsdc_pk.txt
tests/utils/: index.js
